--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Using LearnEnough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
+    
+    <h1>My LearnEnough Story</h1>
+    
     <p>
-      William Shakespeare's <em>Sonnets</em> consists of 154 poems, each fourteen lines long (three
-      <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a>
-      followed by a rhyming
-      <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>).
-      <strong>Sonnet 18</strong> is perhaps the most famous, and begins like this:
+      Learn Enough to Be Dangerous is a leader in the movement to teach
+      technical sophistication, the seemingly magical ability to take
+      command of your computer and get it to do your bidding. This includes
+      everything from command lines and coding to guessing keyboard shortcuts,
+      Googling error messages, and knowing when to just reboot the darn thing.
+      We believe there are at least a billion people who can benefit from
+      learning technical sophistication, probably more. To join our
+      movement, sign up for our official email list now.
     </p>
-    <blockquote>
-        <p>
-        Shall I compare thee to a summer's day?<br>
-        Thou art more lovely and more temperate.<br>
-        Rough winds do shake the darling buds of May,<br>
-        And summer's lease hath all too short a date.
-        </p>
-    </blockquote>
+    <h2>Background</h2>
+
+    <h2>Goals</h2>
+
+    <h3>Learning</h3>
+
+    <h3>Creating</h3>
+
+    <h3>Communicating</h3>
+
   </body>
 </html>
