--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Using LearnEnough to Be Dangerous</title>
+    <title>Using Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
     
-    <h1>My LearnEnough Story</h1>
+    <h1>My Learn Enough Story</h1>
     
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach
-      technical sophistication, the seemingly magical ability to take
-      command of your computer and get it to do your bidding. This includes
-      everything from command lines and coding to guessing keyboard shortcuts,
-      Googling error messages, and knowing when to just reboot the darn thing.
-      We believe there are at least a billion people who can benefit from
-      learning technical sophistication, probably more. To join our
-      movement, sign up for our official email list now.
+      Learn Enough to Be Dangerous is a leader in the movement to teach technical sophistication, the seemingly magical ability to take command of your computer and get it to do your bidding. <br>
+      This includes everything from command lines and coding, to guessing keyboard shortcuts,
+      Googling error messages, and knowing when to just reboot the darn thing.<br>
+      The team at Learn Enough believes there are at least a billion people who can benefit from learning technical sophistication, probably more. <br>
+      To join their movement, sign up for the Learn Enough official email list now.
     </p>
     <h2>Background</h2>
 
