--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1>My Learn Enough Story</h1>
     
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach technical sophistication, the seemingly magical ability to take command of your computer and get it to do your bidding. <br>
+      Learn Enough to Be Dangerous is a leader in the movement to teach technical sophistication, the seemingly magical ability to take command of your computer and get it to do your bidding. <br> <br>
       This includes everything from command lines and coding, to guessing keyboard shortcuts,
-      Googling error messages, and knowing when to just reboot the darn thing.<br>
-      The team at Learn Enough believes there are at least a billion people who can benefit from learning technical sophistication, probably more. <br>
-      To join their movement, sign up for the Learn Enough official email list now.
+      Googling error messages, and knowing when to just reboot the darn thing.<br> <br>
+      The team at Learn Enough believes there are at least a billion people who can benefit from learning technical sophistication, probably more.<br> <br>
+      To join their movement, sign up for the Learn Enough official email list now.<br> <br>
     </p>
     <h2>Background</h2>
 
