--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <h1>My Learn Enough Story</h1>
     
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach technical sophistication, the seemingly magical ability to take command of your computer and get it to do your bidding. <br> <br>
+      Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. <br> 
+      <br>
       This includes everything from command lines and coding, to guessing keyboard shortcuts,
-      Googling error messages, and knowing when to just reboot the darn thing.<br> <br>
-      The team at Learn Enough believes there are at least a billion people who can benefit from learning technical sophistication, probably more.<br> <br>
-      To join their movement, sign up for the Learn Enough official email list now.<br> <br>
+      Googling error messages, and knowing when to just reboot the darn thing.<br> 
+      <br>
+      The team at Learn Enough believes there are <strong>at least a billion people</strong> who can benefit from learning technical sophistication, and probably more.<br> 
+      <br>
+      I am one of those billion people, and I have <strong>absolutely benefited</strong> from completing the <em>Learn Enough</em> tutorials already, with more benefit to come! <br>
+      <br>
+      <em>To join their movement, sign up for the Learn Enough official email list now.</em><br> 
+      <br>
     </p>
     <h2>Background</h2>
 
