--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Using Learn Enough to Be Dangerous</title>
+    <title>Using Learn Enough™ to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
     
-    <h1>My Learn Enough Story</h1>
+    <h1>My Learn Enough™ Story</h1>
     
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. <br> 
-      <br>
-      This includes everything from command lines and coding, to guessing keyboard shortcuts,
+      <em>Learn Enough™ to Be Dangerous</em> is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding, to guessing keyboard shortcuts,
       Googling error messages, and knowing when to just reboot the darn thing.<br> 
       <br>
-      The team at Learn Enough believes there are <strong>at least a billion people</strong> who can benefit from learning technical sophistication, and probably more.<br> 
+      The team at <em>Learn Enough™</em> believes that there are <strong>at least a billion people</strong> who can benefit from learning technical sophistication, and probably more.<br> 
       <br>
-      I am one of those billion people, and I have <strong>absolutely benefited</strong> from completing the <em>Learn Enough</em> tutorials already, with more benefit to come! <br>
+      I am one of those billion people, and I have <em>absolutely benefited</em> from completing several <em>Learn Enough™</em> tutorials already, with more to come! <br>
       <br>
-      <em>To join their movement, sign up for the Learn Enough official email list now.</em><br> 
+      To join their movement, sign up for the <em>Learn Enough™</em> official email list now.<br> 
       <br>
     </p>
     <h2>Background</h2>
