--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       To join their movement, sign up for the <em>Learn Enough™</em> official email list now.<br> 
       <br>
     </p>
-    <h2>Background</h2>
+    
+    <h2><em>Learn Enough™</em> Background</h2>
+
+    <h2><em>Learn Enough™</em> Founders</h2>
 
     <h2>Goals</h2>
 
