--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
       To join their movement, sign up for the <em>Learn Enough™</em> official email list now.<br> 
       <br>
     </p>
-    
+
     <h2><em>Learn Enough™</em> Background</h2>
 
     <h2><em>Learn Enough™</em> Founders</h2>
+      <p>
+        Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
+        Donahoe, and Nick Merwin. We believe that the kind of technical
+        sophistication taught by the Learn Enough tutorials can benefit
+        <strong><em>at least a billion people</em></strong>, and probably more.
+      </p>
 
-    <h2>Goals</h2>
-
-    <h3>Learning</h3>
+    <h2>My Learning Goals</h2>
 
     <h3>Creating</h3>
 
