add background text

--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
       <br>
       I am one of those billion people, and I have <em>absolutely benefited</em> from completing several <em>Learn Enough™</em> tutorials already, with more to come! <br>
       <br>
-      To join their movement, sign up for the <em>Learn Enough™</em> official email list now.<br> 
+      To join their movement, <a href="http://learnenough.com/email">sign up for the <em>Learn Enough™</em> official email list</a> now.<br> 
       <br>
     </p>
 
     <h2><em>Learn Enough™</em> Background</h2>
+      <p>
+        Learn Enough to be Dangerous is an outgrowth of <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. <br>
+        <br>
+        <em>This</em> page is being created as an exercise for the <a href="http://learnenough.com/html-tutorial"><em>Learn Enough™ HTML to Be Dangerous</em></a> tutorial, which teaches the basics of <strong>H</strong>yper <strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage, the universal language of the World Wide Web. <br>
+        <br>
+        This site is a near duplicate of the sample site created to support that tutorial, which I have only changed to include information about <em>my</em> experience and goals for taking these tutorials in the first place.
+      </p>
 
     <h2><em>Learn Enough™</em> Founders</h2>
       <p>
         Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
-        Donahoe, and Nick Merwin. We believe that the kind of technical
-        sophistication taught by the Learn Enough tutorials can benefit
+        Donahoe, and Nick Merwin. They believe that the kind of technical
+        sophistication taught by the Learn Enough™ tutorials can benefit
         <strong><em>at least a billion people</em></strong>, and probably more.
       </p>
 
