--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <h2><em>Learn Enough™</em> Background</h2>
       <p>
-        Learn Enough to be Dangerous is an outgrowth of <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. <br>
+        Learn Enough to be Dangerous is an outgrowth of the <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. <br>
         <br>
-        <em>This</em> page is being created as an exercise for the <a href="http://learnenough.com/html-tutorial"><em>Learn Enough™ HTML to Be Dangerous</em></a> tutorial, which teaches the basics of <strong>H</strong>yper <strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage, the universal language of the World Wide Web. <br>
+        <em>This</em> page is being created as an exercise for the <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to Be Dangerous</em></a> tutorial, which teaches the basics of <strong>H</strong>yper <strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="http://learnenough.com">learnenough.com</a><br>
         <br>
-        This site is a near duplicate of the sample site created to support that tutorial, which I have only changed to include information about <em>my</em> experience and goals for taking these tutorials in the first place.
+        This site is a near duplicate of the sample site created to support that tutorial, which I have only changed to include information about <em>my</em> experience in taking these tutorials, as well as my goals for learning these skills.
       </p>
 
     <h2><em>Learn Enough™</em> Founders</h2>
@@ -37,11 +37,53 @@
         <strong><em>at least a billion people</em></strong>, and probably more.
       </p>
 
+    <h3>Michael Hartl</h3>
+
+      <p>
+        Michael Hartl is the creator of the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the principal author of the <a href="https://www.learnenough.com">Learn Enough to Be Dangerous</a> introductory sequence. He is an advanced student of <a href="https://www.kravmaga.com">Krav Maga</a> and has a three-step plan for world comination. Rumors that he's secretly a supervillian are slightly exaggerated.
+      </p>
+
+      <p>
+        You can follow Michael on Twitter <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">here</a>
+      </p>
+
+    <h3>Lee Donahoe</h3>
+      
+      <p>  
+        When he's not literally swimming with sharks or hunting powder stashes on his snowboard, you can find Lee Donahoe in front of his computer designing interfaces, doing front-end development, or writing some of the interface-related Learn Enough™ tutorials.
+      </p>
+
+      <p>
+        You can follow Lee on Twitter <a href="https://twitter.com/leedonahoe" target="_blank" rel="noopener">here</a>
+      </p>
+
+    <h3>Nick Merwin</h3>
+
+      <p>
+        You may have seen Nick Merwin shredding guitar live with Capital Cities on Jimmy Kimmel, Conan, or the Ellen show, but rest assured he is a true nerd at heart. He's just as happy shredding well-spec'd lines of code from a tour bus as he is from his kitchen table.
+      </p>
+
+      <p>
+        You can follow Nick on Twitter <a href="https://twitter.com/nickmerwin" target="_blank" rel="noopener">here</a>
+      </p>
+
     <h2>My Learning Goals</h2>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
+      </p>
 
     <h3>Creating</h3>
 
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
+      </p>
+
     <h3>Communicating</h3>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
+      </p>
 
   </body>
 </html>
