change image source to gravatar

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <h2 style="margin-left: 10px;">My Learning Goals</h2>
 
-      <img src="images/emily_sample_website_profile_pic.jpeg" width="150" height="175" alt="cartoon of author" style="margin-left: 40px;">
+      <img src="https://avatars.githubusercontent.com/u/242511619?s=150" alt="author gravatar" style="margin-left: 40px;">
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
