add twitter link and replacement image for twitter logo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Using Learn Enough™ to Be Dangerous</title>
+    <title>Using Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -24,11 +24,25 @@
         To join their movement, <a href="http://learnenough.com/email">sign up for the <em>Learn Enough™</em> official email list</a> now.
       </p>
 
+      <p>
+        <!-- This Twitter logo image from the tutorial seems to be corrupt and will not display at all 
+         <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
+            <img src="images/small_twitter_logo.png" alt="Twitter Logo"> -->
+        <a href="https://pixabay.com/photos/robin-bird-wild-bird-songbird-9578746/" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
+          <img src="images/little_robin.webp" alt="Cute Little Robin" width=70 height=60 style="margin-left: 40px;">
+        </a>
+        You can follow Learn Enough™ on Twitter too!
+        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here
+        </a>
+      </p>
+
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         HTML was created by the original "web developer", computer scientist <a href="https://en.widipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were. 
       </p>
 
-      <img src="images/kitten.jpg" alt="An Adorable Kitten" style="margin-left: 40px;">
+      <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+        <img src="images/kitten.jpg" alt="An Adorable Kitten" style="margin-left: 40px;">
+      </a>
 
     <h2 style="margin-left: 10px;"><em>Learn Enough™</em> Background</h2>
 
