add my personal info

--- a/index.html
+++ b/index.html
@@ -110,20 +110,42 @@
       <img src="https://avatars.githubusercontent.com/u/242511619?s=150" alt="author gravatar" style="margin-left: 40px;">
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
+        I started the Learn Enough™ tutorials at the recommendation of a friend. I work in a technological field, but I have never had to do coding or programming as part of my regular work. But, with the increasing availability of AI-driven tools, I realized it was time for me to upskill - at least enough so that I could use and (even more important!) evaluate outputs from AI tools
       </p>
-
-    <h3 style="margin-left: 40px;">Creating</h3>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
+        Additionally, I have several hobbies, and I have occasionally thought to myself "wouldn't it be awesome if I could make <em>X</em>, <em>Y</em>, or <em>Z</em>" kind of tool, app, excel spreadsheet, or whatever to help me do some parts of those hobbies more efficiently?" And lo and behold!, the Learn Enough™ tutorials offer me the foundational skills and knowledge that I need to start exploring some of these projects!
       </p>
 
-    <h3 style="margin-left: 40px;">Communicating</h3>
+    <h3 style="margin-left: 40px;">Why Learn Enough and not Some Other Option?</h3>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellat ipsam quo inventore ad rerum, praesentium, tempore odit, facilis numquam? Harum quidem aliquam magni officiis aut odit neque saepe.
-      </p>
+        Before starting with Learn Enough™, I did explore some other tutorial options. There are a seemingly infinite number of tutorials and tools available online to learn these skills, and many of them are completely free! But inevitably a pattern started repeating:
+        
+        <p style="margin-left: 100px;" style="margin-right: 40px; text-align: right;">
+            -I'd start a course or Tutorial<br>
+            -Everything would go great! ... for a while<br>
+            -Suddenly the tutorial is assuming that I have all kinds of background knowledge that I just don't have<br>
+            -Or! The tutorial is uber technical, focusing on miniscule details and academic arcana<br>
+            -And I start to feel like I'm learning lots of academic knowledge, but I'm not sure how useful this information will be day-to-day
+        </p>
+
+        <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
+            And then my friend recommended that I check out <a href="http://learnenough.com">learnenough.com</a>. 
+        
+        </p>
+
+        <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
+          What make Learn Enough™ different is that they start off by assuming that you know <em>nothing</em>. Beginning with <em>Learn Enough Command Line to Be Dangerous</em>, they introduce you to absolutely basic computer knowledge. They help guide you through downloading the right programs. And they leave enough ambiguity to allow you to build your <em>technical sopistication</em> by seeking out your own answers to some questions. 
+        </p>
+
+        <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
+            Not only am I much closer to making the personal projects that I want to make. Not only am I increasing my knowledge for more effectiveness in my job. <strong>BUT ALSO</strong> I've learned about how my own computer works, I'm thinking and problem solving in new ways, and I'm having <em>so much fun</em> while I'm learning!
+        </p>
+
+        <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
+            And here you are, reading my words on a website that I made, soup to nuts, myself! Not bad progress for a "non-techie".
+        </p>
 
   </body>
 </html>
