edit my personal info

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </p>
 
         <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
-            And here you are, reading my words on a website that I made, soup to nuts, myself! Not bad progress for a "non-techie".
+            And here you are, reading my words on a website that I made, soup to nuts, myself! I'm using the command line, tracking crap on GitHub, and building a simple website! Not bad progress for a "non-techie".
         </p>
 
   </body>
