comment out troublesome image

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <!-- This Twitter logo image from the tutorial seems to be corrupt and will not display at all 
          <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
             <img src="images/small_twitter_logo.png" alt="Twitter Logo"> -->
-        <a href="https://pixabay.com/photos/robin-bird-wild-bird-songbird-9578746/" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
+        <!-- For whatever reason, it doesn't like this image either; I'll deal with this later
+         <a href="https://pixabay.com/photos/robin-bird-wild-bird-songbird-9578746/" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
           <img src="images/little_robin.webp" alt="Cute Little Robin" width=70 height=60 style="margin-left: 40px;">
-        </a>
+        </a> -->
         You can follow Learn Enough™ on Twitter too!
         <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here
         </a>
@@ -114,7 +115,7 @@
       </p>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
-        Additionally, I have several hobbies, and I have occasionally thought to myself "wouldn't it be awesome if I could make <em>X</em>, <em>Y</em>, or <em>Z</em>" kind of tool, app, excel spreadsheet, or whatever to help me do some parts of those hobbies more efficiently?" And lo and behold!, the Learn Enough™ tutorials offer me the foundational skills and knowledge that I need to start exploring some of these projects!
+        Additionally, I have several hobbies, and I have occasionally thought to myself "wouldn't it be awesome if I could make <em>X</em>, <em>Y</em>, or <em>Z</em>" kind of tool, app, or whatever to help me do some parts of those hobbies more efficiently?" And lo and behold!, the Learn Enough™ tutorials offer me the foundational skills and knowledge that I need to start exploring some of these projects!
       </p>
 
     <h3 style="margin-left: 40px;">Why Learn Enough and not Some Other Option?</h3>
