slight formatting fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         To join their movement, <a href="http://learnenough.com/email">sign up for the <em>Learn Enough™</em> official email list</a> now.
       </p>
 
-      <p>
+      <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         <!-- This Twitter logo image from the tutorial seems to be corrupt and will not display at all 
          <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
             <img src="images/small_twitter_logo.png" alt="Twitter Logo"> -->
@@ -32,8 +32,8 @@
          <a href="https://pixabay.com/photos/robin-bird-wild-bird-songbird-9578746/" target="_blank" rel="noopener" style="text-decoration: none;" style="margin-left: 40px;">
           <img src="images/little_robin.webp" alt="Cute Little Robin" width=70 height=60 style="margin-left: 40px;">
         </a> -->
-        You can follow Learn Enough™ on Twitter too!
-        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here
+        You can follow Learn Enough™ on Twitter
+        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here!
         </a>
       </p>
 
