--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <img src="images/little_robin.webp" alt="Cute Little Robin" width=70 height=60 style="margin-left: 40px;">
         </a> -->
         You can follow Learn Enough™ on Twitter
-        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here!
-        </a>
+        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here
+        </a>!
       </p>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
