--- a/tags.html
+++ b/tags.html
@@ -44,24 +44,34 @@
                     <td>include a paragraph of text</td>
                 </tr>
                 <tr>
-                    <td>table</td>
+                    <td><code>table</code></td>
                     <td>table</td>
                     <td>include a table</td>
                 </tr>
                 <tr>
-                    <td>tr</td>
+                    <td><code>tr</code></td>
                     <td>table row</td>
                     <td>include a row of data</td>
                 </tr>
                 <tr>
-                    <td>th</td>
+                    <td><code>th</code></td>
                     <td>table header</td>
                     <td>make a table header</td>
                 </tr>
                 <tr>
-                    <td>td</td>
+                    <td><code>td</code></td>
                     <td>table data</td>
                     <td>include a table data cell</td>
+                </tr>
+                <tr>
+                    <td><code>header</code></td>
+                    <td>header</td>
+                    <td>semantic tag that defines introductory content</td>
+                </tr>
+                <tr>
+                    <td><code>div</code></td>
+                    <td>division</td>
+                    <td>isolates sections of a document for better application of layout techniques</td>
                 </tr>
             </table>
 
@@ -130,6 +140,14 @@
                         <code>this is source code</code>
                     </td>
                 </tr>
+                <tr>
+                    <td><code>span</code></td>
+                    <td>span</td>
+                    <td>group and apply style or scripts to specific elements</td>
+                    <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
+                    <td><span>Call me Ishmael.</span></td>
+                </tr>
+
             </table>
 
     </body>
