add new content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     
+    <div>
+      <a href="index.html">Home</a><br>
+      <a href="tags.html">HTML Tags</a><br>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
     <h1 style="margin-left: 10px;">My Learn Enough™ Story</h1>
     
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
