--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,13 @@
         <title>HTML Tags</title>
         <meta charset="utf-8">
     </head>
+        
+    <div>
+      <a href="index.html">Home</a><br>
+      <a href="tags.html">HTML Tags</a><br>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
     <body>
         
         <h1>Important HTML tags</h1>
@@ -72,6 +79,18 @@
                     <td><code>div</code></td>
                     <td>division</td>
                     <td>isolates sections of a document for better application of layout techniques</td>
+                </tr>
+
+                <tr>
+                    <td><code>ol</code></td>
+                    <td>ordered list</td>
+                    <td>creates an ordered, or numbered, list</td>
+                </tr>
+
+                <tr>
+                    <td><code>ul</code></td>
+                    <td>unordered list</td>
+                    <td>creates a non-ordered, or bulleted, list</td>
                 </tr>
             </table>
 
@@ -144,10 +163,16 @@
                     <td><code>span</code></td>
                     <td>span</td>
                     <td>group and apply style or scripts to specific elements</td>
-                    <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
-                    <td><span>Call me Ishmael.</span></td>
+                    <td><code>&lt;span&gt;I want to do something special with this text.&lt;/span&gt;</code></td>
+                    <td><span>I want to do something special with this text.</span></td>
                 </tr>
-
+                <tr>
+                    <td><code>li</code></td>
+                    <td>list item</td>
+                    <td>a row or item in a list, whether ordered or unordered</td>
+                    <td><code>&lt;li&gt;list element&lt;/li&gt;</code></td>
+                    <td><li>list element</li></td>
+                </tr>
             </table>
 
     </body>
