--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,6 +5,13 @@
         <title>Moby Dick</title>
         <meta charset="utf-8">
     </head>
+        
+    <div>
+      <a href="index.html">Home</a><br>
+      <a href="tags.html">HTML Tags</a><br>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
     <body>
         <!-- much here to be styled, will do so in the last section-->
         
@@ -47,6 +54,26 @@
                 jillion pages. The only thing bigger than Moby Dick (who&mdash;<em>spoiler
                 alert!</em>&mdash;is a giant white whale) is the book itself.
             </p>
+
+            <h4>Our Top 3 Favorite Things About Moby Dick</h4>
+
+            <ol>
+                <li>A Vengeful Whale</li>
+                <li>Salty Sailors</li>
+                <li>The Names "Queequeg" and "Starbuck"</li>
+            </ol>
+
+            <h4>Other Fun Things About Moby Dick</h4>
+
+            <ul>
+                <li>Chapter after chapter (after chapter) of meticulous detail about whaling</li>
+                <li>The story pretty much
+                    <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" target="_blank" rel="noopener">happened in real life
+                    </a>
+                </li>
+                <li>Mad sea captains are dope</li>
+            </ul>
+
         </div>
 
     </body>
