add some formatting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="moby_dick.html">Moby Dick</a>
     </div>
 
-    <h1 style="margin-left: 10px;">My Learn Enough™ Story</h1>
+    <h1 style="text-align: center;">Using <em>Learn Enough</em> to Gain New Skills</h1>
     
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         <em>Learn Enough to Be Dangerous™</em> is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding, to guessing keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing. 
@@ -51,7 +51,9 @@
         <img src="images/kitten.jpg" alt="An Adorable Kitten" style="margin-left: 40px;">
       </a>
 
-    <h2 style="margin-left: 10px;"><em>Learn Enough™</em> Background</h2>
+    <h1 style="text-align: center;">The <em>Learn Enough</em> Story</h1>
+    
+      <h2 style="margin-left: 10px;">Background</h2>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         Learn Enough to be Dangerous is an outgrowth of the <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>.
@@ -65,7 +67,7 @@
         This site is a near duplicate of the sample site created to support that tutorial, which I have only changed to include information about <em>my</em> experience in taking these tutorials, as well as my goals for learning these skills.
       </p>
 
-    <h2 style="margin-left: 10px;"><em>Learn Enough™</em> Founders</h2>
+    <h2 style="margin-left: 10px;">Founders</h2>
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         <em>Learn Enough to Be Dangerous™</em> was founded in 2015 by Michael Hartl, Lee
         Donahoe, and Nick Merwin. They believe that the kind of technical
@@ -112,9 +114,11 @@
         You can follow Nick on Twitter <a href="https://twitter.com/nickmerwin" target="_blank" rel="noopener">here</a>
       </p>
 
-    <h2 style="margin-left: 10px;">My Learning Goals</h2>
+    <h1 style="text-align: center;">My Learning Goals</h1>
 
-      <img src="https://avatars.githubusercontent.com/u/242511619?s=150" alt="author gravatar" style="margin-left: 40px;">
+      <div style="text-align: center;">
+        <img src="https://avatars.githubusercontent.com/u/242511619?s=150" alt="author gravatar" style="margin-left: 40px;">
+      </div>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         I started the <em>Learn Enough</em> tutorials at the recommendation of a friend. I work in a technological field, but I have never had to do coding or programming as part of my regular work. But, with the increasing availability of AI-driven tools, I realized it was time for me to upskill - at least enough so that I could use and (even more important!) evaluate outputs from AI tools
@@ -124,7 +128,7 @@
         Additionally, I have several hobbies, and I have occasionally thought to myself "wouldn't it be awesome if I could make <em>X</em>, <em>Y</em>, or <em>Z</em>" kind of tool, app, or whatever to help me do some parts of those hobbies more efficiently?" And lo and behold!, the <em>Learn Enough</em> tutorials offer me the foundational skills and knowledge that I need to start exploring some of these projects!
       </p>
 
-    <h3 style="margin-left: 40px;">Why Learn Enough and not Some Other Option?</h3>
+    <h2 style="margin-left: 40px;">Why Learn Enough and not Some Other Option?</h2>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         Before starting with <em>Learn Enough</em>, I did explore some other tutorial options. There are a seemingly infinite number of tutorials and tools available online to learn these skills, and many of them are completely free! But inevitably a pattern started repeating:
