--- a/moby_dick.html
+++ b/moby_dick.html
@@ -13,11 +13,10 @@
     </div>
 
     <body>
-        <!-- much here to be styled, will do so in the last section-->
         
         <header>
-            <h1>A softcover Book Report</h1>
-            <h2>Moby Dick (or, The Whale)</h2>
+            <h1 style="text-align: center">A softcover Book Report</h1>
+            <h2 style="text-align: center">Moby Dick (or, The Whale)</h2>
         </header>
 
         <div>
@@ -26,25 +25,30 @@
             </p>
         </div>
 
-        <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg" target="_blank" rel="noopener">
+        <div style="text-align: center;">
+            <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg" target="_blank" rel="noopener">
             <img src="images/sperm_whales.jpg" alt="sperm whales swimming free">
         </a>
+        </div>
 
-        <div>
+        <div >
             
-            <h3>Moby Dick: A Classic Tale of the Sea</h3>
+            <h3 style="text-align: center;">Moby Dick: A Classic Tale of the Sea</h3>
 
+            <div style="text-align: center;">
             <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
                 <img src="images/moby_dick.png" alt="Moby Dick Book Cover">
             </a>
+            </div>
+
             <p>
                 <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
                 <em>Moby Dick</em></a> 
             by Herman Melville begins with these immortal words:
             </p>
-            <blockquote>
+            <blockquote style="font-style: italic; font-size: 20px;">
                 <p>
-                    <span>Call me Ishmael.</span> Some years ago&ndash;never mind how long precisely&ndash;having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation.
+                    <span style="font-style: normal;font-size: 24pm; font-weight: bold; color: #3440eb;">Call me Ishmael.</span> Some years ago&ndash;never mind how long precisely&ndash;having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation.
                 </p>
             </blockquote>
 
