--- a/tags.html
+++ b/tags.html
@@ -13,11 +13,13 @@
 
     <body>
         
-        <h1>Important HTML tags</h1>
+        <h1 style="text-align: center;">Important HTML tags</h1>
         
+        <div style="text-align: center;">
         <a href="https://www.flickr.com/photos/jdhancock/3814523970">
             <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
         </a>
+        </div>
 
         <p>
             This page is designed as a quick reference for some of the common tags
