--- a/moby_dick.html
+++ b/moby_dick.html
@@ -37,7 +37,8 @@
 
             <div style="text-align: center;">
             <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
-                <img src="images/moby_dick.png" alt="Moby Dick Book Cover">
+                <img src="images/moby_dick.png" alt="Moby Dick Book Cover" height="200px" 
+                style="float: left; margin: 10px 40px 0 0;">
             </a>
             </div>
 
