format and center images

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       </p>
 
       <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
-        <img src="images/kitten.jpg" alt="An Adorable Kitten" style="margin-left: 40px;">
+        <img src="images/kitten.jpg" alt="An Adorable Kitten" style="display: block; margin: 0 auto;">
       </a>
-
+      <br>
     <h1 style="text-align: center;">The <em>Learn Enough</em> Story</h1>
     
       <h2 style="margin-left: 10px;">Background</h2>
@@ -75,10 +75,10 @@
         <strong><em>at least a billion people</em></strong>, and probably more.
       </p>
 
-    <h3 style="margin-left: 40px;">Michael Hartl</h3>
-
       <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
-     alt="Michael Hartl" style="margin-left: 40px;">
+     alt="Michael Hartl" style="display: block; float: left; margin: 10px 40px 0 0;">
+
+    <h3 style="margin-left: 40px;">Michael Hartl</h3>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         Michael Hartl is the creator of the <a href="https://www.railstutorial.org/"><em>Ruby on Rails Tutorial</em></a> and the principal author of the <a href="https://www.learnenough.com"><em>Learn Enough to Be Dangerous</em></a> introductory sequence. He is an advanced student of <a href="https://www.kravmaga.com">Krav Maga</a> and has a three-step plan for world comination. Rumors that he's secretly a supervillian are slightly exaggerated.
@@ -88,11 +88,11 @@
         You can follow Michael on Twitter <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">here</a>
       </p>
 
+      <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+     alt="Lee Donahoe" style="display: block; float: left; margin: 10px 40px 0 0;">
+
     <h3 style="margin-left: 40px;">Lee Donahoe</h3>
       
-      <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
-     alt="Lee Donahoe" style="margin-left: 40px;">
-
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">  
         When he's not literally swimming with sharks or hunting powder stashes on his snowboard, you can find Lee Donahoe in front of his computer designing interfaces, doing front-end development, or writing some of the interface-related <em>Learn Enough</em> tutorials.
       </p>
@@ -101,10 +101,10 @@
         You can follow Lee on Twitter <a href="https://twitter.com/leedonahoe" target="_blank" rel="noopener">here</a>
       </p>
 
-    <h3 style="margin-left: 40px;">Nick Merwin</h3>
-
       <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
-     alt="Nick Merwin" style="margin-left: 40px;">
+     alt="Nick Merwin" style="display: block; float: left; margin: 10px 40px 0 0;">
+
+    <h3 style="margin-left: 40px;">Nick Merwin</h3>
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         You may have seen Nick Merwin shredding guitar live with Capital Cities on <em>Jimmy Kimmel</em>, <em>Conan</em>, or the <em>Ellen</em> show, but rest assured he is a true nerd at heart. He's just as happy shredding well-spec'd lines of code from a tour bus as he is from his kitchen table.
@@ -113,12 +113,10 @@
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         You can follow Nick on Twitter <a href="https://twitter.com/nickmerwin" target="_blank" rel="noopener">here</a>
       </p>
-
+      <br><br>
     <h1 style="text-align: center;">My Learning Goals</h1>
 
-      <div style="text-align: center;">
-        <img src="https://avatars.githubusercontent.com/u/242511619?s=150" alt="author gravatar" style="margin-left: 40px;">
-      </div>
+        <img src="https://avatars.githubusercontent.com/u/242511619?s=150" alt="author gravatar"  style="display: block; margin: 0 auto;">
 
       <p style="margin-left: 40px;" style="margin-right: 40px; text-align: right;">
         I started the <em>Learn Enough</em> tutorials at the recommendation of a friend. I work in a technological field, but I have never had to do coding or programming as part of my regular work. But, with the increasing availability of AI-driven tools, I realized it was time for me to upskill - at least enough so that I could use and (even more important!) evaluate outputs from AI tools
