--- a/moby_dick.html
+++ b/moby_dick.html
@@ -14,9 +14,9 @@
 
     <body>
         
-        <header>
-            <h1 style="text-align: center">A softcover Book Report</h1>
-            <h2 style="text-align: center">Moby Dick (or, The Whale)</h2>
+        <header style="text-align: center; margin: 0 0 80px 0;">
+            <h1>A softcover Book Report</h1>
+            <h2>Moby Dick (or, The Whale)</h2>
         </header>
 
         <div>
@@ -25,22 +25,18 @@
             </p>
         </div>
 
-        <div style="text-align: center;">
             <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg" target="_blank" rel="noopener">
-            <img src="images/sperm_whales.jpg" alt="sperm whales swimming free">
+            <img src="images/sperm_whales.jpg" alt="sperm whales swimming free" style="display: block; margin: 0 auto;">
         </a>
-        </div>
 
         <div >
             
             <h3 style="text-align: center;">Moby Dick: A Classic Tale of the Sea</h3>
 
-            <div style="text-align: center;">
             <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
                 <img src="images/moby_dick.png" alt="Moby Dick Book Cover" height="200px" 
-                style="float: left; margin: 10px 40px 0 0;">
+                 style="display: block; float: left; margin: 10px 40px 0 0;">
             </a>
-            </div>
 
             <p>
                 <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
