add background color and block formatting

--- a/moby_dick.html
+++ b/moby_dick.html
@@ -29,13 +29,13 @@
             <img src="images/sperm_whales.jpg" alt="sperm whales swimming free" style="display: block; margin: 0 auto;">
         </a>
 
-        <div >
+        <div style="width: 580px; margin: 20px auto; padding: 30px; background-color: #dadee6">
             
             <h3 style="text-align: center;">Moby Dick: A Classic Tale of the Sea</h3>
 
             <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
                 <img src="images/moby_dick.png" alt="Moby Dick Book Cover" height="200px" 
-                 style="display: block; float: left; margin: 10px 40px 0 0;">
+                 style="display: block; float: left; margin: 0 20px 0 0;">
             </a>
 
             <p>
