--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,8 +5,8 @@
         <title>Moby Dick</title>
         <meta charset="utf-8">
     </head>
-        
-    <div>
+    
+    <div style="text-align: right;">
       <a href="index.html">Home</a><br>
       <a href="tags.html">HTML Tags</a><br>
       <a href="moby_dick.html">Moby Dick</a>
