--- a/tags.html
+++ b/tags.html
@@ -4,8 +4,8 @@
         <title>HTML Tags</title>
         <meta charset="utf-8">
     </head>
-        
-    <div>
+    
+    <div style="text-align: right;">
       <a href="index.html">Home</a><br>
       <a href="tags.html">HTML Tags</a><br>
       <a href="moby_dick.html">Moby Dick</a>
