--- a/tags.html
+++ b/tags.html
@@ -6,9 +6,9 @@
     </head>
     
     <div style="text-align: right;">
-      <a href="index.html">Home</a><br>
-      <a href="tags.html">HTML Tags</a><br>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="index.html" style=" text-decoration: none; color: blue;">Home</a><br>
+      <a href="tags.html" style="text-decoration: none; color: blue;">HTML Tags</a><br>
+      <a href="moby_dick.html" style="text-decoration: none; color: blue;">Moby Dick</a>
     </div>
 
     <body>
@@ -92,6 +92,11 @@
                     <td>unordered list</td>
                     <td>creates a non-ordered, or bulleted, list</td>
                 </tr>
+                <tr>
+                    <td><code>blockquote</code></td>
+                    <td>block quote</td>
+                    <td>creates a block of text that can be formatted on its own</td>
+                </tr>
             </table>
 
         <h2>Inline Elements</h2>
@@ -173,7 +178,53 @@
                     <td><code>&lt;li&gt;list element&lt;/li&gt;</code></td>
                     <td><li>list element</li></td>
                 </tr>
+                <tr>
+                    <td><code>br</code></td>
+                    <td>line break</td>
+                    <td>creates a line break, or a new paragraph</td>
+                    <td><code>I'm the first line.&lt;br&gt;I'm a new paragraph.</code></td>
+                    <td>I'm the first line.<br>I'm a new paragraph.</td>
+                </tr>
             </table>
 
+        <h2>Document Tags</h2>
+            
+            <table style="margin: 0 auto;">
+                <tr>
+                    <td>Tag</td>
+                    <td>Name</td>
+                    <td>Purpose</td>
+                </tr>
+                <tr>
+                    <td><code>!Doctype</code></td>
+                    <td>Document Type</td>
+                    <td>Indicates what type of document this is, such as html, css, or markdown.</td>
+                </tr>
+                <tr>
+                    <td><code>html</code></td>
+                    <td>HTML, or Hyper Text Markup Language</td>
+                    <td>Indicates that this document is written using html</td>
+                </tr>
+                <tr>
+                    <td><code>head</code></td>
+                    <td>Document Header</td>
+                    <td>Indicates that this is the header, or the section of the document that contains foundational information such as the title, and any meta information. </td>
+                </tr>
+                <tr>
+                    <td><code>body</code></td>
+                    <td>Document Body</td>
+                    <td>Indicates that this is the body section of the document, or the section that contains all content that gets displayed.</td>
+                </tr>
+                <tr>
+                    <td><code>title</code></td>
+                    <td>Title</td>
+                    <td>The title of the document.</td>
+                </tr>
+                <tr>
+                    <td><code>meta</code></td>
+                    <td>Meta Tag</td>
+                    <td>Specifies "meta" informationa bout the document, such as character sets to use.</td>
+                </tr>
+            </table>
     </body>
 </html>
