--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     
     <div style="text-align: right;">
-      <a href="index.html">Home</a><br>
-      <a href="tags.html">HTML Tags</a><br>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="index.html" style=" text-decoration: none; color: blue;">Home</a><br>
+      <a href="tags.html" style="text-decoration: none; color: blue;">HTML Tags</a><br>
+      <a href="moby_dick.html" style="text-decoration: none; color: blue;">Moby Dick</a>
     </div>
 
     <h1 style="text-align: center;">Using <em>Learn Enough</em> to Gain New Skills</h1>
